# CPP-07-Part-2-CW-RaceGame

./: CMakeLists.txt  readme.md
RaceApp/headers/: utility.h
RaceApp/resources/: botcallsigns.txt  botnames.txt
RaceApp/src/: racesim.cpp  utility.cpp
RaceLib/includes/: RaceLibExceptions.h
RaceLib/interface/: RaceLib.ixx  RaceLibExceptions.ixx
RaceLib/interfaces/: RaceLib.ixx
